Fix 403: allow OPTIONS preflight and fix CORS config